login and logout decorators

--- a/main/templates/auth/pet.html
+++ b/main/templates/auth/pet.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="brand">
-   <h4 class="text-gradient">{{pet.name}}  <i class="fa-solid fa-paw"></i>  <img src="{{pet.pet_image.url}}" class="pet-img" alt="pet image"></h4>
+   <h4 class="text-gradient">{{pet.name}}   <img src="{{pet.pet_image.url}}" class="pet-img" alt="pet image"></h4>
 </div>
 
 
