--- a/main/templates/login/changePassword.html
+++ b/main/templates/login/changePassword.html
@@ -12,7 +12,7 @@
     <h2 class="text-center">Change Password</h2>
 
     <div class="form">
-      {{error}}
+      <p class="text-danger fs-5 text">{{error}}</p>
     <form method="POST">
       {% csrf_token %}
         <div class="mb-3">
