--- a/main/templates/login/confirm.html
+++ b/main/templates/login/confirm.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="container">
     <div class="brand">
-        <h1 class="text-gradient">PetTrack <i class="fa-solid fa-shield-cat"></i> </h1>
+        <h1 class="text-gradient">PetTrack <i class="fa-solid fa-paw"></i> </h1>
         <p class="slogan">Keeping your pets on track </p>
     </div>
 
