--- a/main/templates/login/index.html
+++ b/main/templates/login/index.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="form">
-      {{error}}
+      <p class="text-danger fs-5 text">{{error}}</p>
     <form method="POST">
       {% csrf_token %}
         <div class="mb-3">
@@ -24,10 +24,7 @@
           <label for="exampleInputPassword1" class="form-label">Password</label>
           <input type="password" class="form-control" id="exampleInputPassword1"name="password">
         </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
+  
         <button type="submit" class="btn-custom">Submit</button>
       </form>
     </div>
