--- a/main/templates/adminLayout.html
+++ b/main/templates/adminLayout.html
@@ -32,7 +32,7 @@
                     <a class="nav-link active" aria-current="page" href="/home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link active" href="{% url "profile" %}">Profile</a>
                   </li>
                 </ul>
               </div>
