--- a/main/templates/auth/home.html
+++ b/main/templates/auth/home.html
@@ -9,7 +9,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">New Pet</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel"> Pet</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -65,7 +65,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" id="petSubmit" class="btn btn-primary">Add</button>
+        <button type="button" id="petSubmit" class="btn btn-primary">Save</button>
       </div>
     </div>
   </div>
@@ -76,6 +76,8 @@
 <h2 class="text-center fw-bold mt-3">My Pets</h2>
 
 <div class="card-container">
+  {% if pets %}
+
   {% for pet in pets %}
     <a href="{% url 'dashboard' id=pet.id %}">
       <div class="pet mb-3"> 
@@ -95,7 +97,14 @@
         </div>
       </div>
     </a>
+   
+
+
   {% endfor %}
+  {% else %}
+  <p class="text-center ">
+    You do not have any pet registered</p>
+  {% endif %}
 </div>
 
 
