--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -7,7 +7,7 @@
 
 <div class="container index mt-4">
     <div class="brand">
-        <h1 class="text-gradient">PetTrack <i class="fa-solid fa-shield-cat"></i> </h1>
+        <h1 class="text-gradient">PetTrack <i class="fa-solid fa-paw"></i>  </h1>
         <p class="slogan">Keeping your pets on track </p>
     </div>
 
@@ -17,9 +17,9 @@
         <h4>Create Account</h4>
         <div class="error">
               {% for error in errors  %}
-                <p>{{error}}</p>
+              <p class="text-danger fs-5 text">{{error}}</p>
               {% endfor %}
-             {{error}} 
+              <p class="text-danger fs-5 text">{{error}}</p>
         </div>
         <div class="mb-3">
             <label for="name" class="form-label">Name</label>
