--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="{% static 'pets/styles.css' %}" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6c76bbdb90.js" crossorigin="anonymous"></script>
-    <title>Name</title>
+    <title>PetTrack</title>
 </head>
 <body>
 
