--- a/main/templates/login/index.html
+++ b/main/templates/login/index.html
@@ -31,7 +31,7 @@
 
     <div class="nav-links">
 
-      <a href="{% url 'register' %}">Don't have an account?</a>
+      <a href="{% url 'register' %}">Don't have an account?,, new branch</a>
       <a href="{% url "forgot" %}">Forgot password?</a>
     </div>
 </div>
