--- a/main/templates/auth/history.html
+++ b/main/templates/auth/history.html
@@ -15,7 +15,7 @@
           <form id="historyForm" enctype="multipart/form-data" >
             {% csrf_token %}
             <div class="mb-3">
-              <label for="subject" class="col-form-label">Subject:</label>
+              <label for="subject" class="col-form-label">Subjsect:</label>
               <input type="text" class="form-control" id="subject" name="subject" >
             </div>
             <div class="mb-3">
