--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link href="{% static 'pets/css/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'styles.css' %}" rel="stylesheet">
+    
     <script src="https://kit.fontawesome.com/6c76bbdb90.js" crossorigin="anonymous"></script>
     <title>PetTrack</title>
 </head>
