--- a/main/templates/auth/history.html
+++ b/main/templates/auth/history.html
@@ -119,7 +119,7 @@
 
 {% block script %}
 
-<script src="{% static 'pets/js/history.js' %}"></script>
+<script src="{% static '/js/history.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 {% endblock script %}
