--- a/main/templates/auth/appo.html
+++ b/main/templates/auth/appo.html
@@ -94,7 +94,7 @@
 
 
 {% block script %}
-<script src="{% static 'js/history.js' %}"></script>
+<script src="{% static '/js/history.js' %}"></script>
 <script src="https://kit.fontawesome.com/6c76bbdb90.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
