--- a/main/templates/auth/petInfo.html
+++ b/main/templates/auth/petInfo.html
@@ -28,7 +28,7 @@
 
 {% block script %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
-<script src="{% static 'pets/js/petInfo.js' %}"></script>
+<script src="{% static 'js/petInfo.js' %}"></script>
 {% endblock script %}
 
 
