--- a/main/templates/auth/vaccines.html
+++ b/main/templates/auth/vaccines.html
@@ -103,7 +103,7 @@
 {% endblock body %}
 
 {% block script %}
-<script src="{% static 'pets/js/vacc.js' %}"></script>
+<script src="{% static 'js/vacc.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 {% endblock script %}
