--- a/main/templates/auth/medications.html
+++ b/main/templates/auth/medications.html
@@ -128,7 +128,7 @@
 
 {% block script %}
 
-<script src="{% static 'pets/js/medicines.js' %}"></script>
+<script src="{% static 'js/medicines.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
