--- a/main/templates/auth/weightControl.html
+++ b/main/templates/auth/weightControl.html
@@ -81,7 +81,7 @@
 {% block script %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-<script src="{% static 'pets/js/weight.js' %}"></script>
+<script src="{% static 'js/weight.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
