--- a/static/styles.css
+++ b/static/styles.css
@@ -101,6 +101,21 @@ aside {
   margin-bottom: 0;
 }
 
+
+.pet-name{
+  font-family: 'Poppins', sans-serif !important;
+  font-weight: 800 !important;
+  background: rgb(211,245,0);
+  background: linear-gradient(90deg, rgba(211,245,0,1) 0%, rgba(244,9,33,1) 100%);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  letter-spacing: .01px;
+  margin-bottom: 0;
+  font-size:50px ;
+}
+
 .brand p {
   font-family: 'Lato', sans-serif;
   font-size: 0.8rem;
@@ -242,7 +257,7 @@ aside{
 
 .pet-title {
   color: #333;
-  font-size: 24px;
+  font-size: 35px;
   font-weight: bold;
   margin: 0;
 }
