--- a/main/templates/auth/pet.html
+++ b/main/templates/auth/pet.html
@@ -1,7 +1,7 @@
 {% extends 'adminLayout.html' %}
 
 {% block body %}
-<div class="pet-name">
+<div class="pet-main-name">
    <h4 class="text-gradient">{{pet.name}} </h4>
 </div>
 
