--- a/static/styles.css
+++ b/static/styles.css
@@ -102,7 +102,7 @@ aside {
 }
 
 
-.pet-name{
+.pet-main-name{
   font-family: 'Poppins', sans-serif !important;
   font-weight: 800 !important;
   background: rgb(211,245,0);
