--- a/main/templates/auth/pet.html
+++ b/main/templates/auth/pet.html
@@ -1,8 +1,8 @@
 {% extends 'adminLayout.html' %}
 
 {% block body %}
-<div class="pet-main-name">
-   <h4 class="text-gradient">{{pet.name}} </h4>
+<div class="">
+   <h4 class="text-gradient pet-main-name">{{pet.name}} </h4>
 </div>
 
 
