--- a/main/templates/login/index.html
+++ b/main/templates/login/index.html
@@ -25,13 +25,13 @@
           <input type="password" class="form-control" id="exampleInputPassword1"name="password">
         </div>
   
-        <button type="submit" class="btn-custom">Submit</button>
+        <button type="submit" class="btn-custom">Login</button>
       </form>
     </div>
 
     <div class="nav-links">
 
-      <a href="{% url 'register' %}">Don't have an account?,, new branch</a>
+      <a href="{% url 'register' %}">Don't have an account?</a>
       <a href="{% url "forgot" %}">Forgot password?</a>
     </div>
 </div>
