--- a/main/templates/auth/home.html
+++ b/main/templates/auth/home.html
@@ -85,7 +85,7 @@
 
         </div> 
         <div class="pet-body">
-          <h5 class="pet-title text-center text-white" >{{ pet.name }} </h5>
+          <h5 class="pet-title text-center text-white" >{{ pet.name }} <i class="fa-solid fa-paw"></i> </h5>
           <div class="mt-4 actionsPet">
             <div class="editPet" data-bs-toggle="modal" data-bs-target="#exampleModal" data-petid="{{ pet.id }}" data-name="{{pet.name}}"
             data-birth="{{pet.birth}}" data-sex="{{pet.sex}}" data-breed="{{pet.breed}}" data-weight="{{pet.weight}}" data-specie="{{pet.specie}}"
