--- a/main/templates/auth/home.html
+++ b/main/templates/auth/home.html
@@ -86,17 +86,7 @@
         </div> 
         <div class="pet-body">
           <h5 class="pet-title text-center text-white" >{{ pet.name }} 
-            {% if pet.specie == "dog" %}
-            <i class="fa-solid fa-paw"></i> 
-            {% elif pet.specie == "cat"  %}
-            <i class="fa-solid fa-cat"></i>
-            {% elif pet.specie == "bird"  %}
-            <i class="fa-solid fa-feather-pointed"></i>
-            {% elif pet.specie ==" reptil" %}
-            <i class="fa-solid fa-dragon"></i>
-            {% elif pet.specie ==" fish" %}
-            <i class="fa-solid fa-fish"></i>
-            {% endif %}
+            <span class="badge bg-primary">{{ pet.specie }}</span>
             </h5>
           <div class="mt-4 actionsPet">
             <div class="editPet" data-bs-toggle="modal" data-bs-target="#exampleModal" data-petid="{{ pet.id }}" data-name="{{pet.name}}"
