--- a/main/templates/auth/home.html
+++ b/main/templates/auth/home.html
@@ -90,6 +90,10 @@
             <i class="fa-solid fa-paw"></i> 
             {% elif pet.specie == "cat" %}
             <i class="fa-solid fa-cat"></i> 
+            {%elif pet.specie == "bird" %}
+            <i class="fa-solid fa-feather"></i>
+            {%elif pet.specie == "reptil" %}
+            <i class="fa-solid fa-staff-snake"></i>
             {% endif %}
             </h5>
           <div class="mt-4 actionsPet">
