--- a/main/templates/login/email.html
+++ b/main/templates/login/email.html
@@ -11,7 +11,7 @@
     <div class="text">
 
     </div>
-    <p class="text-center ">Great! We've sent you a confirmation email. Check your inbox and follow the instructions.</p>
+    <p class="text-center ">Great! We've sent you a confirmation email. Check your inbox and follow the instructions. It usually takes 5 minutes to arrive</p>
     <p class=" text-center">If you don't see the email, please check your spam folder</p>
 
     <a href="{% url 'index' %}" class="text-center">Login</a>
